--- a/Exc_3/skeleton/debug.env
+++ b/Exc_3/skeleton/debug.env
@@ -2,4 +2,6 @@ POSTGRES_DB=order
 POSTGRES_USER=docker
 POSTGRES_PASSWORD=docker
 POSTGRES_TCP_PORT=5432
-DB_HOST=127.0.0.1
+
+# for bridge networking:
+DB_HOST=postgres18
