adding minio and md saving of receipts Exc6

--- a/Exc_6/skeleton/debug.env
+++ b/Exc_6/skeleton/debug.env
@@ -2,7 +2,11 @@ POSTGRES_DB=order
 POSTGRES_USER=docker
 POSTGRES_PASSWORD=docker
 PGPORT=5555
-DB_HOST=127.0.0.1
+DB_HOST=order-postgres
 S3_ACCESS_KEY_ID=root
 S3_SECRET_ACCESS_KEY=verysecret
-S3_ENDPOINT=localhost:8500
+S3_ENDPOINT=order-minio:8500
+MINIO_ROOT_USER=root
+MINIO_ROOT_PASSWORD=verysecret
+SERVER_PORT=80
+SERVER_ROOT=/public
