--- a/Exc_6/skeleton/docker-compose.yml
+++ b/Exc_6/skeleton/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 volumes:
   order_pg_vol:
-  # todo
+  order_minio_vol:
 
 services:
   traefik:
@@ -36,24 +36,16 @@ services:
       - "traefik.http.routers.orders.rule=Host(`orders.localhost`)"
       - "traefik.http.routers.orders.entrypoints=web"
       - "traefik.http.services.orders.loadbalancer.server.port=3000"
-    environment:
-      - POSTGRES_DB=order
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
-      - PGPORT=5555
-      - DB_HOST=order-postgres
-      - S3_ACCESS_KEY_ID=root
-      - S3_SECRET_ACCESS_KEY=verysecret
-      - S3_ENDPOINT=order-minio:8500
+    env_file:
+      - debug.env
     networks:
       - intercom
       - web
 
   sws:
     image: joseluisq/static-web-server:latest
-    environment:
-      - SERVER_PORT=80
-      - SERVER_ROOT=/public
+    env_file:
+      - debug.env
     volumes:
       - ./frontend:/public
     labels:
@@ -73,16 +65,18 @@ services:
       - intercom
     ports:
       - "5555:5555"
-    environment:
-      - POSTGRES_DB=order
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
-      - PGPORT=5555
+    env_file:
+      - debug.env
 
   order-minio:
-    # todo use minio/minio:latest as image
-    # expose 8500
-    # add to network intercom
-    # use the following commands: "server", "--address", ":8500", "/data"
-    # map the data volume
-    # set environment variables MINIO_ROOT_USER and MINIO_ROOT_PASSWORD
+    image: minio/minio:latest
+    command: ["server", "--address", ":8500", "/data"]
+    restart: unless-stopped
+    env_file:
+      - debug.env
+    ports:
+      - "8500:8500"
+    volumes:
+      - order_minio_vol:/data
+    networks:
+      - intercom
